--- a/MilitaryProject/MilitaryProject/appsettings.json
+++ b/MilitaryProject/MilitaryProject/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-DFQ3FKMK\\TORGSOFT;Database=MilitaryDB;Trusted_Connection=True; Integrated Security=true"
+    "DefaultConnection": "Server=DESKTOP-GCIDL2V\\MSSQLSERVER1;Database=MilitaryDB;Trusted_Connection=True;TrustServerCertificate=true;Integrated Security=true"
   },
 
   "AllowedHosts": "*"
