--- a/MilitaryProject/MilitaryProject/appsettings.json
+++ b/MilitaryProject/MilitaryProject/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-DFQ3FKMK\\TORGSOFT;Database=MilitaryDB;Trusted_Connection=True; Integrated Security=true"
+    "DefaultConnection": "Server=NazariiPC;Database=MilitaryDB;Trusted_Connection=True; Integrated Security=true"
   },
 
   "AllowedHosts": "*"
