--- a/MilitaryProject/MilitaryProject.DAL/MilitaryProject.DAL.csproj
+++ b/MilitaryProject/MilitaryProject.DAL/MilitaryProject.DAL.csproj
@@ -14,6 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Seq.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Serilog" Version="4.0.0-dev-02122" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.2-dev-00334" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.0-dev-00806" />
