--- a/MilitaryProject/MilitaryProject/appsettings.Development.json
+++ b/MilitaryProject/MilitaryProject/appsettings.Development.json
@@ -35,5 +35,13 @@
       }
     ],
     "Enrich": [ "FromLogContext", "WithThreadId", "WithMachineName" ]
+  },
+  "Seq": {
+    "ServerUrl": "http://localhost:5341",
+    "ApiKey": "1234567890",
+    "MinimumLevel": "Trace",
+    "LevelOverride": {
+      "Microsoft": "Warning"
+    }
   }
 }
