--- a/MilitaryProject/MilitaryProject/appsettings.json
+++ b/MilitaryProject/MilitaryProject/appsettings.json
@@ -8,5 +8,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=NazariiPC;Database=MilitaryDB;Trusted_Connection=True; Integrated Security=true"
   },
+  "Seq": {
+    "ServerUrl": "http://localhost:5341",
+    "ApiKey": "1234567890",
+    "MinimumLevel": "Trace",
+    "LevelOverride": {
+      "Microsoft": "Warning"
+    }
+  },
   "AllowedHosts": "*"
 }
