--- a/MilitaryProject/MilitaryProject/appsettings.json
+++ b/MilitaryProject/MilitaryProject/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-GCIDL2V\\MSSQLSERVER1;Database=MilitaryDB;Trusted_Connection=True;TrustServerCertificate=true;Integrated Security=true"
+    "DefaultConnection": "Server=NazariiPC\\MSSQLSERVER1;Database=MilitaryDB;Trusted_Connection=True;TrustServerCertificate=true;Integrated Security=true"
   },
   "Seq": {
     "ServerUrl": "http://localhost:5341",
