hilarious code added

--- a/MilitaryProject/MilitaryProject/appsettings.Development.json
+++ b/MilitaryProject/MilitaryProject/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-GCIDL2V\\MSSQLSERVER1;Database=MilitaryDB;Trusted_Connection=True;TrustServerCertificate=true"
+    "DefaultConnection": "Server=NazariiPC;Database=MilitaryDB;Trusted_Connection=True;TrustServerCertificate=true"
   },
   "AllowedHosts": "*",
   "Serilog": {
