--- a/MilitaryProject/MilitaryProject.DAL/MilitaryProject.DAL.csproj
+++ b/MilitaryProject/MilitaryProject.DAL/MilitaryProject.DAL.csproj
@@ -13,6 +13,7 @@
 	  </PackageReference>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.3">
       <PrivateAssets>all</PrivateAssets>
