--- a/MilitaryProject/MilitaryProject/appsettings.Development.json
+++ b/MilitaryProject/MilitaryProject/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-DFQ3FKMK\\TORGSOFT;Database=MilitaryDB;Trusted_Connection=True;TrustServerCertificate=true"
+    "DefaultConnection": "Server=DESKTOP-JE5R83Q;Database=MilitaryDB;Trusted_Connection=True; Integrated Security=true; Encrypt=False"
   },
   "AllowedHosts": "*",
   "Serilog": {
