--- a/MilitaryProject/MilitaryProject/appsettings.json
+++ b/MilitaryProject/MilitaryProject/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-JE5R83Q;Database=MilitaryDB;Trusted_Connection=True; Integrated Security=true; Encrypt=False"
+    "DefaultConnection": "Server=DESKTOP-GCIDL2V\\MSSQLSERVER1;Database=MilitaryDB;Trusted_Connection=True; Integrated Security=true; Encrypt=False"
   },
   "Seq": {
     "ServerUrl": "http://localhost:5341",
