--- a/MilitaryProject/MilitaryProject.Domain/MilitaryProject.Domain.csproj
+++ b/MilitaryProject/MilitaryProject.Domain/MilitaryProject.Domain.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="Moq.EntityFrameworkCore" Version="8.0.1.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Seq.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Serilog" Version="4.0.0-dev-02122" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.2-dev-00334" />
