new css provided

--- a/MilitaryProject/MilitaryProject/appsettings.Development.json
+++ b/MilitaryProject/MilitaryProject/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-GCIDL2V\\MSSQLSERVER1;Database=MilitaryDB;Trusted_Connection=True; Integrated Security=true; Encrypt=False"
+    "DefaultConnection": "Server=NAZARIIPC;Database=MilitaryDB;Trusted_Connection=True; Integrated Security=true; Encrypt=False"
   },
   "AllowedHosts": "*",
   "Serilog": {
@@ -43,5 +43,6 @@
     "LevelOverride": {
       "Microsoft": "Warning"
     }
-  }
+  },
+  "hotReloadEnabled": true
 }
